Support simpler collection insert.
